--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 title: BotanyBase Network | Server::FooNg
-remote-theme: no-style-please
+remote-theme: riggraz/no-style-please
+favicon: "logo.png"
