--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: BotanyBase Network | Server::FooNg
-remote-theme: riggraz/no-style-please
+remote_theme: riggraz/no-style-please
 favicon: "logo.png"
